Update bitcoin configuration and CLI to use boolean flags for various options, and improve RPC configuration handling.

--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -12,7 +12,7 @@
 ### Options
 
 # Data directory
-datadir=~/.bitcoinblerg
+datadir=~/.bitcoindir
 
 # Specify additional configuration file, relative to the -datadir path
 # (only useable from configuration file, not command line)
@@ -57,7 +57,7 @@ datadir=~/.bitcoinblerg
 # disable pruning blocks, 1 = allow manual pruning via RPC, >=550 =
 # automatically prune block files to stay under the specified
 # target size in MiB)
-prune=0
+#prune=<n>
 
 # If enabled, wipe chain state and block index, and rebuild them from
 # blk*.dat files on disk. Also wipe and rebuild other optional
@@ -89,7 +89,7 @@ prune=0
 
 # Maintain a full transaction index, used by the getrawtransaction rpc
 # call (default: 0)
-txindex=true
+#txindex=<n>
 
 # Print version and exit
 version=1
@@ -431,7 +431,7 @@ version=1
 
 # Use the chain <chain> (default: main). Allowed values: main, test,
 # testnet4, signet, regtest
-chain=testnet4
+chain=test
 
 # Use the signet chain. Equivalent to -chain=signet. Note that the network
 # is defined by the -signetchallenge parameter
@@ -519,7 +519,7 @@ chain=testnet4
 # then connects normally using the
 # rpcuser=<USERNAME>/rpcpassword=<PASSWORD> pair of arguments. This
 # option can be specified multiple times
-#rpcauth=<userpw>
+rpcauth=fdsafdsa
 
 # Bind to given address to listen for JSON-RPC connections. Do not expose
 # the RPC server to untrusted networks such as the public internet!
@@ -538,11 +538,11 @@ chain=testnet4
 #rpccookieperms=<readable-by>
 
 # Password for JSON-RPC connections
-
+#rpcpassword=<pw>
 
 # Listen for JSON-RPC connections on <port> (default: 8332, testnet3:
 # 18332, testnet4: 48332, signet: 38332, regtest: 18443)
-
+rpcport=fdsa
 
 # Set the number of threads to service RPC calls (default: 16)
 #rpcthreads=<n>
@@ -567,7 +567,7 @@ chain=testnet4
 #rpcwhitelistdefault=1
 
 # Accept command line and JSON-RPC commands
-#server=1
+server=1
 
 
 # [Sections]
