User checkpoint: Configure Bitcoin client for testnet4, update prune setting, and add prune and server status display to status bar.

--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -57,7 +57,7 @@ datadir=~/.bitcoin
 # disable pruning blocks, 1 = allow manual pruning via RPC, >=550 =
 # automatically prune block files to stay under the specified
 # target size in MiB)
-#prune=<n>
+prune=0333
 
 # If enabled, wipe chain state and block index, and rebuild them from
 # blk*.dat files on disk. Also wipe and rebuild other optional
@@ -431,7 +431,7 @@ version=1
 
 # Use the chain <chain> (default: main). Allowed values: main, test,
 # testnet4, signet, regtest
-chain=main
+chain=testnet4
 
 # Use the signet chain. Equivalent to -chain=signet. Note that the network
 # is defined by the -signetchallenge parameter
@@ -527,7 +527,7 @@ chain=main
 # optional and overrides -rpcport. Use [host]:port notation for
 # IPv6. This option can be specified multiple times (default:
 # 127.0.0.1 and ::1 i.e., localhost)
-#rpcbind=<addr>[:port]
+rpcbind=0000
 
 # Location of the auth cookie. Relative paths will be prefixed by a
 # net-specific datadir location. (default: data dir)
